<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_white">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/bg_black">

        <ImageView
            android:id="@+id/profile_img"
            android:layout_width="fill_parent"
            android:layout_height="64dp"
            android:src="@drawable/biz_pc_main_info_profile_avatar_bg_dark"
            android:padding="@dimen/padding_small"/>

        <TextView
            android:id="@+id/profile_text_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_img"
            android:textColor="@color/text_white"
            android:textSize="20dp"
            android:text="@string/profile_login"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/profile_text_qiangjifen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_text_login"
            android:textColor="@color/text_yellow"
            android:text="@string/profile_present"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/profile_ll"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/profile_small_image_height"
            android:layout_above="@+id/profile_ll_text"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/biz_pc_main_read_icon"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/biz_pc_main_fav_icon"
                android:layout_weight="1"/>
            <ImageView
                android:layout_width="0dip"
                android:layout_height="fill_parent"
                android:scaleType="fitCenter"
                android:src="@drawable/biz_pc_main_tie_icon"
                android:layout_weight="1"/>


            </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_ll_text"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/profile_small_text_height"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                style="@style/profile_text_small"
                android:text="@string/profile_read"/>
            <TextView
                style="@style/profile_text_small"
                android:text="@string/profile_store"/>
            <TextView
                style="@style/profile_text_small"
                android:text="@string/profile_gentie"/>



        </LinearLayout>

        </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <ListView
            android:id="@+id/profile_list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:divider="@null"
            android:layout_alignParentTop="true"
            />
        <View
            android:id="@+id/profile_line"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray"
            android:layout_above="@+id/profile_ll_bottom_img"
            android:layout_marginBottom="@dimen/margin_middle"/>

        <LinearLayout
            android:id="@+id/profile_ll_bottom_img"
            android:layout_width="fill_parent"
            android:layout_height="22dp"
            android:layout_above="@+id/profile_ll_bottom_text"
            android:orientation="horizontal">

            <ImageView
                style="@style/profile_img_bottom"
                android:src="@drawable/biz_plugin_icon_headline"/>
            <ImageView
                style="@style/profile_img_bottom"
                android:src="@drawable/biz_plugin_icon_msg"/>
            <ImageView
                style="@style/profile_img_bottom"
                android:src="@drawable/biz_plugin_icon_mail"/>
            <ImageView
                style="@style/profile_img_bottom"
                android:src="@drawable/biz_plugin_icon_welfare"/>
            <ImageView
                style="@style/profile_img_bottom"
                android:src="@drawable/biz_plugin_icon_caipiao"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/profile_ll_bottom_text"
            android:layout_width="fill_parent"
            android:layout_height="32dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                style="@style/profile_text_bottom"
                android:text="@string/profile_to_toutiao"/>
            <TextView
                style="@style/profile_text_bottom"
                android:text="@string/profile_message"/>
            <TextView
                style="@style/profile_text_bottom"
                android:text="@string/profile_mail"/>
            <TextView
                style="@style/profile_text_bottom"
                android:text="@string/profile_gongyi"/>
            <TextView
                style="@style/profile_text_bottom"
                android:text="@string/profile_caipiao"/>

            </LinearLayout>

        </RelativeLayout>

</LinearLayout>